# contradots-techconnect-chain

./: ._Cargo.toml  .gitignore  Cargo.toml  README.md  network.toml  rust-toolchain.toml
node/: ._Cargo.toml  Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/badges/: Cargo.toml
pallets/badges/src/: lib.rs  mock.rs  tests.rs
pallets/member-registry/: ._Cargo.toml  Cargo.toml
pallets/member-registry/src/: lib.rs  mock.rs  tests.rs
pallets/proposal-router/: ._Cargo.toml  Cargo.toml
pallets/proposal-router/src/: lib.rs  mock.rs  tests.rs
pallets/rewards/: ._Cargo.toml  Cargo.toml
pallets/rewards/src/: lib.rs  mock.rs  tests.rs
pallets/tcc/: ._Cargo.toml  Cargo.toml
pallets/tcc/src/: lib.rs  mock.rs  tests.rs
runtime/: ._Cargo.toml  ._build.rs  Cargo.toml  build.rs
runtime/src/: lib.rs
