[package]
name = "techconnectchain-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "techconnectchain_runtime"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-session/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-member-registry/std",
    "pallet-badges/std",
    "pallet-tcc/std",
    "pallet-rewards/std",
    "pallet-proposal-router/std",
    "scale-info/std",
    "pallet-sudo/std",
]
metadata-hash = []
substrate-wasm-builder = ["dep:substrate-wasm-builder"]

[dependencies]
# Add local pallet crates as runtime dependencies; adjust paths if your structure differs.
pallet-member-registry = { path = "../pallets/member-registry", default-features = false}
pallet-badges          = { path = "../pallets/badges",           default-features = false}
pallet-tcc             = { path = "../pallets/tcc",              default-features = false}
pallet-rewards         = { path = "../pallets/rewards",          default-features = false}
pallet-proposal-router = { path = "../pallets/proposal-router",  default-features = false}

# Use FRAME versions that match your Substrate base. Adjust versions as required.
frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-core = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
pallet-balances = { version = "44.0.0", default-features = false }
pallet-timestamp = { version = "42.0.0", default-features = false }
pallet-assets = { version = "46.1.0", default-features = false }
pallet-sudo = { version = "43.0.0", default-features = false }
frame-executive = { version = "43.0.0", default-features = false }
sp-api = { version = "39.0.0", default-features = false }
sp-block-builder = { version = "39.0.0", default-features = false }
sp-inherents = { version = "39.0.0", default-features = false }
sp-offchain = { version = "39.0.0", default-features = false }
sp-session = { version = "41.0.0", default-features = false }
sp-transaction-pool = { version = "39.0.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }
substrate-wasm-builder = { version = "29.0.0", optional = true}
parity-scale-codec = "3.7.5"
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

[build-dependencies]
substrate-wasm-builder = { version = "29.0.0"}


