[package]
name = "pallet-rewards"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pallet_rewards"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
codec = { version = "3.7.5", package = "parity-scale-codec", default-features = false }
pallet-timestamp = { version = "42.0.0", default-features = false }
scale-info = { version = "2.11.1", package = "scale-info", default-features = false }
pallet-member-registry = { path = "../member-registry", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { version = "44.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
    "scale-info/std",
    "pallet-timestamp/std",
    "pallet-member-registry/std",
    "serde",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]