[package]
name = "pallet-tcc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pallet_tcc"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
frame-support = { version = "43.0.0", default-features = false}
frame-system = { version = "43.0.0", default-features = false }
pallet-assets = { version = "46.1.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
codec = { version = "3.7.5", package = "parity-scale-codec", default-features = false }
scale-info = { version = "2.0", package = "scale-info", default-features = false }

[dev-dependencies]
pallet-balances = { version = "44.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
    "scale-info/std",
    "pallet-balances/std",
    "sp-core/std",
    "sp-io/std",
]
